<resources>
    <string name="app_name">好活</string>
    <string name="main_title">好活 - 安全守护</string>
    <string name="enable_service">启用服务</string>
    <string name="disable_service">禁用服务</string>
    <string name="test_sms">测试短信</string>
    <string name="add_contact">添加联系人</string>
    <string name="edit_sms_template">编辑短信模板</string>
    <string name="view_logs">查看日志</string>
    <string name="contact_name">联系人姓名</string>
    <string name="contact_phone">手机号码</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="service_enabled">服务已启用</string>
    <string name="service_disabled">服务已禁用</string>
    <string name="sms_sent_success">短信发送成功</string>
    <string name="sms_sent_failed">短信发送失败</string>
    <string name="default_sms_template">[好活] 用户已5小时未操作手机，请确认安全</string>
    <string name="select_contact">选择联系人</string>
    <string name="no_contacts">暂无联系人，请添加紧急联系人</string>
    <string name="service_running">服务运行中</string>
    <string name="service_stopped">服务已停止</string>
    <string name="permission_required">需要相关权限才能正常工作</string>
    <string name="grant_permission">授予权限</string>
</resources>